# snapview

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/: app.manifest  icon-proposals.html
installer/: snapview.iss
src/: main.rs
