[package]
name = "snapview"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif", "webp", "tiff"] }
rfd = "0.15"
walkdir = "2.5"
rayon = "1.10"
kamadak-exif = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
